--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
   </head>
   <body>
-
-    <form action="test.php" method="post" enctype="multipart/form-data">
+     <form action="send_mail.php" method="post" enctype="multipart/form-data">
+<!-- <form action="test.php" method="post" enctype="multipart/form-data"> -->
       <fieldset>
         <legend>Send Mail</legend>
         <p>
@@ -34,10 +34,10 @@
             <label for="message">Message :</label>
             <textarea id="message" name="message" cols="40" rows="4"></textarea>
         </p>
-        <!-- <p>
+        <p>
           <label for="piece">Piece Jointe :</label>
           <input type="file" name="fileToUpload" id="fileToUpload">
-        </p> -->
+        </p>
         <p>
             <input type="submit" id="envoye" name="envoye" value="Envoyer" />
         </p>
