--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
   </head>
   <body>
-     <form action="send_mail.php" method="post" enctype="multipart/form-data">
-<!-- <form action="test.php" method="post" enctype="multipart/form-data"> -->
+     <!-- <form action="send_mail.php" method="post" enctype="multipart/form-data"> -->
+     <form action="test.php" method="post" enctype="multipart/form-data">
       <fieldset>
         <legend>Send Mail</legend>
         <p>
